[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Extensible, Concurrency Focused Web Development in Rust."
documentation = "http://ironframework.io/doc/iron/"
license = "MIT"
name = "iron"
readme = "README.md"
repository = "https://github.com/iron/iron"
version = "0.6.0"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
http = "0.1.7"
hyper = "0.12"
log = "0.3"
mime = "0.3.8"
mime_guess = "2.0.0-alpha.5"

[dev-dependencies]
time = "0.1"

[features]
default = []
ssl = [
    "native-tls",
    "tokio-tls",
]

[lib]
name = "iron"
path = "src/lib.rs"
