[package]

name = "persistent"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.4.0"
description = "A set of middleware for sharing server-global data in Iron."
repository = "https://github.com/iron/persistent"
documentation = "http://ironframework.io/doc/persistent/index.html"
license = "MIT"
keywords = ["iron", "web", "persistence", "sharing", "global"]

[dependencies]
iron = { git = "https://github.com/iron/iron", branch = "master" }
plugin = "0.2"
