[package]

name = "mount"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.4.0"
description = "Mounting middleware for Iron."
repository = "https://github.com/iron/mount"
documentation = "http://ironframework.io/doc/mount/index.html"
license = "MIT"
keywords = ["iron", "web", "handler", "routing"]

[dependencies]
iron = { path = "../iron", version = "0.6" }
sequence_trie = "0.3"
