[package]

name = "persistent"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.4.0"
description = "A set of middleware for sharing server-global data in Iron."
repository = "https://github.com/iron/persistent"
documentation = "https://docs.rs/persistent"
license = "MIT"
keywords = ["iron", "web", "persistence", "sharing", "global"]

[dependencies]
iron = { path = "../iron", version = "0.6" }
plugin = "0.2"
